Play with multiple variant

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -363,7 +363,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /******* dashboard sidebar **************/
 .dashboard-container {
     max-width: 1600px;
-    margin: auto;
+    //margin: auto;
     width: 100%;
 
     .menu-item {
